# FFmpegStudy

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xbp/ffmpeg/ffmpegstudy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/ffmpeg_examples/: filtering_audio.cpp
app/src/main/java/com/xbp/ffmpeg/ffmpegstudy/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xbp/ffmpeg/ffmpegstudy/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
